<resources>
    <string name="app_name">EvaLab_ResultAnalisisClinicos</string>
    <string name="strNameApp">EvaLab</string>
    <string name="strBtnAnali">Analizar</string>
    <string name="strBtnAnter">Anterior</string>
    <string name="strBtnSig">Siguiente</string>
    <string name="strBtnAcept">Aceptar</string>
    <string name="strBtnCancel">Cancelar</string>
    <string name="strBtnEdit">Editar</string>
    <string name="strBtnCamb">Cambiar</string>
    <string name="strBtnElimin">Eliminar</string>
    <string name="strInterpre">Interpretar Análisis</string>
    <string name="strResults">Resultados</string>
    <string name="strVerPerfil">Perfil</string>
    <string name="strInfo">Información</string>
    <string name="strTituloCateg">Categorias</string>
    <string name="strExaSangre">Exámenes de Sangre</string>
    <string name="strExaOrina">Exámenes de Orina</string>
    <string name="strExaHepatica">Exámenes de Función Hepática</string>
    <string name="strExaRenal">Exámenes de Función Renal</string>
    <string name="strExaTiroides">Exámenes de Tiroides</string>
    <string name="strExaInfecciosas">Enfermedades Infecciosas</string>
    <string name="strTituloEstSalud">Estado de Salud</string>
    <string name="strCorazon">Corazón</string>
    <string name="strRinion">Riñones</string>
    <string name="strHigado">Hígado</string>
    <string name="strPancreas">Pancreas</string>
    <string name="strMeduOse">M. Ósea</string>
    <string name="strTiroides">Tiroides</string>
    <string name="strInfeccion">Infecciones</string>
    <string name="strVerde">Normal</string>
    <string name="strAmarillo">Preocupante</string>
    <string name="strRojo">Mal</string>
    <string name="strDesconocido">Sin Información</string>
    <string name="strExamenHemograma">Biometría Hemática / Hemograma Completo</string>
    <string name="strExamenPerLipi">Perfil Lipídico</string>
    <string name="strExamenGlucosa">Glucosa (en ayunas)</string>
    <string name="strExamenElecSer">Electrolitos Séricos</string>
    <string name="strExamenEGO">Examen General de Orina (EGO)</string>
    <string name="strExamenFunRenal">Examen Función Renal</string>
    <string name="strExamenFunHepatica">Examen Función Hepática</string>
    <string name="strExamenFunTiroides">Examen Función Tiroidea</string>
    <string name="strExamenUrocultivo">Urocultivo</string>
    <string name="strExamenALT">Alanina Aminotransferasa (ALT)</string>
    <string name="strExamenAST">Aspartato Aminotransferasa (AST)</string>
    <string name="strExamenBilirrubina">Bilirrubina</string>
    <string name="strExamenCreaSerica">Creatinina Sérica</string>
    <string name="strExamenBUN">Nitrógeno Ureico en Sangre (BUN)</string>
    <string name="strExamenTSH">Hormona Estimulante de la Tiroides (TSH)</string>
    <string name="strExamenT4">T4 (Tiroxina)</string>
    <string name="strVIH">Prueba de VIH</string>
    <string name="strHepatitisBC">Prueba de Hepatitis B y C</string>
    <string name="strSifilis">Prueba de Sífilis</string>
    <string name="strHemoglobina">Hemoglobina</string>
    <string name="strHematocrito">Hematocrito</string>
    <string name="strGloRojos">Eritrocitos (Globulos Rojos)</string>
    <string name="strVMG">Volumen Globular/Corpuscular Medio (VMG / VCM)</string>
    <string name="strHCM">Hemoglobina Corpuscular Media (HCM)</string>
    <string name="strReticulocitos">Cuenta Correjida de Reticulocitos</string>
    <string name="strLeucocitos">Leucocitos</string>
    <string name="strNeutrofilos">Neutrofilos</string>
    <string name="strEosinofilos">Eosinofilos</string>
    <string name="strLinfocitos">Linfocitos</string>
    <string name="strBasofilos">Basofilos</string>
    <string name="strMonocitos">Monocitos</string>
    <string name="strPlaquetas">Plaquetas</string>
    <string name="strVolPlaquetas">Volumen plaquetario Medio</string>
    <string name="strVolum">Volumen</string>
    <string name="strOlor">Olor</string>
    <string name="strColor">Color</string>
    <string name="strAspecto">Aspecto</string>
    <string name="strCelulas">Celulas</string>
    <string name="strCilindros">Cilindros</string>
    <string name="strBacterias">Bacterias</string>
    <string name="strParasitos">Parásitos</string>
    <string name="strPiocitos">Piocitos</string>
    <string name="strComunIntracelar">Comunidad Intracelar Bacteriana</string>
    <string name="strBlastoconidios">Blastoconidios</string>
    <string name="strFilMucina">Filamentos de Mucina</string>
    <string name="strPH">PH</string>
    <string name="strDensidad">Densidad</string>
    <string name="strProteinas">Proteinas</string>
    <string name="strGlucos">Glucosa</string>
    <string name="strCuerCetonicos">Cuerpos Cetónicos</string>
    <string name="strNitritos">Nitritos</string>
    <string name="strUrobilinogeno">Urobilinogeno</string>
    <string name="strEsteLeucoci">Estereasa Leucocitaria</string>
    <string name="strExamenHint">Dato</string>
    <string name="strAlaninaT">Alanina Transaminasa (ALT o GOT)</string>
    <string name="strAspartatoT">Aspartato Transaminasa (AST o GPT)</string>
    <string name="strFosfatasaA">Fosfatasa Alcalina (ALP o FA)</string>
    <string name="strAlbumina">Albúmina</string>
    <string name="strGammaG">Gamma glutamil transferasa (GGT)</string>
    <string name="strBilirrubinaT">Bilirrubina Total</string>
    <string name="strBilirrubinaD">Bilirrubina Directa</string>
    <string name="strTiempoP">Tiempo de protrombina (TP)</string>
    <string name="strHormonaT3L">T3 Libre</string>
    <string name="strHormonaT3T">T3 Total</string>
    <string name="strHormonaT4L">T4 Libre</string>
    <string name="strHormonaT4T">T4 Total</string>
    <string name="strHormonaTSH">TSH</string>
    <string name="strCreatininaSe">Creatinina Sérica</string>
    <string name="strBUN">BUN</string>
    <string name="strProteinuria">Proteinuria</string>
    <string name="strMicroalabuminuria">Microalbuminuria</string>
    <string name="strCreatininaUrina">Creatinina Urinaria</string>
    <string name="strSodio">Sodio</string>
    <string name="strPotasio">Potasio</string>
    <string name="strCloro">Cloro</string>
    <string name="strBicarbonato">Bicarbonato</string>
    <string name="strAcidoUr">Ácido Úrico</string>
    <string name="strFosfoSer">Fósforo Sérico</string>
    <string name="strGramosDesilitros">gr/dL</string>
    <string name="strPorcentaje">%</string>
    <string name="strFentolitros">fL</string>
    <string name="strPicogramos">Pg</string>
    <string name="strNLeucocitos">x10^3 / μL</string>
    <string name="strNHeritrocitos">x10^6 / μL</string>
    <string name="strMicrolitros">μL</string>
    <string name="strMililitros">ml</string>
    <string name="strMiligramosDesilitros">mg / dL</string>
    <string name="strSobreCampo">/campo</string>
    <string name="strMetro">m</string>
    <string name="strKilogramo">Kg</string>
    <string name="strUnidInterLitro">UI/L</string>
    <string name="strUnidLitro">U / L</string>
    <string name="strSegundos">seg</string>
    <string name="strMiliUnidInterLitro">mUI / L</string>
    <string name="strNanogramosDecilitro">μg / dL</string>
    <string name="strNanogramosDecilitro2">ng / dL</string>
    <string name="strNanogramosMililitro">ng / mL</string>
    <string name="strPicogramosMililitro">pg / mL</string>
    <string name="strMiligramosDia">mg / día</string>
    <string name="strMiliequivalenteLitro">mEq / L</string>
    <string name="strMiligramosProteGramosCreati">mg/g</string>
    <string name="strResultResultados">Resultados</string>
    <string name="strResultEnfer">Enfermedades</string>
    <string name="strResultEstado">Estado</string>
    <string name="strFragResultBuscar">Seleccione Examen</string>
    <string name="strListResResult">Resultado</string>
    <string name="strListResValores">Valores Referencia</string>
    <string name="strSinResResultTxtView">Por favor ingrese algún resultado de un Análisis Clínico</string>
    <string name="strSinResResultBtn">Registrar Análisis</string>
    <string name="strSinEnferResultTxtView">"¡Excelentes noticias! No se detectaron indicios de ninguna enfermedad en sus resultados. Sin embargo, le recomendamos que consulte a su médico para obtener una evaluación más completa de su salud."</string>
    <string name="strInfUserNombre">Nombre</string>
    <string name="strInfUserNombreHint">Ingrese su Nombre</string>
    <string name="strInfUserApell">Apellidos</string>
    <string name="strInfUserApellHint">Ingrese sus Apellidos</string>
    <string name="strInfUserSex">Sexo</string>
    <string name="strInfUserMasc">Masculino</string>
    <string name="strInfUserFeme">Femenino</string>
    <string name="strInfUserFecha">Fecha de Nacimiento</string>
    <string name="strInfUserFechaHint">dd-MM-YYYY</string>
    <string name="strInfUserAltura">Estatura</string>
    <string name="strInfUserAlturaHint">Altura</string>
    <string name="strInfUserPeso">Peso</string>
    <string name="strInfUserEmbarazada">Estoy Embarazada</string>
    <string name="strEditUsuarioTitulo">Editar Usuario</string>
    <string name="strInfHCHemoglobina">La hemoglobina es una proteína presente en los glóbulos rojos que desempeña un papel crucial en el transporte de oxígeno desde los pulmones hasta los tejidos del cuerpo. Facilita el intercambio de oxígeno y dióxido de carbono en los pulmones y tejidos. Valores bajos pueden indicar anemia, mientras que valores altos podrían sugerir deshidratación o problemas pulmonares.</string>
    <string name="strInfHCHematocrito">El hematocrito es la proporción del volumen de sangre ocupado por los glóbulos rojos. Contribuye a la viscosidad de la sangre y afecta su capacidad para transportar oxígeno. Valores elevados pueden indicar deshidratación, y valores bajos podrían sugerir anemia o pérdida de sangre.</string>
    <string name="strInfHCEritrocitos">Los eritrocitos son glóbulos rojos responsables del transporte de oxígeno y dióxido de carbono. Transportan oxígeno a los tejidos y ayudan a eliminar el dióxido de carbono. Valores anormales pueden indicar anemia, deshidratación o problemas de médula ósea.</string>
    <string name="strInfHCHCM">Es la relación entre la cifra de Hgb (g/dl) y el número de eritrocitos por microlitro. Este resultado es de gran utilidad como prueba presuntiva de deficiencia de hierro, clasifica los eritrocitos como normocrómicos o hipocrómicos.</string>
    <string name="strInfHCVGM">Mide el tamaño de los eritrocitos y se calcula por la relación entre el Hto y el recuento de eritrocitos. Con este valor, las anemias se clasifican en microcíticas (volumen corpuscular medio [VCM] disminuido) y macrocíticas (VCM aumentado).</string>
    <string name="strInfHCReticulocitos">Mide la producción de glóbulos rojos. Los reticulocitos corresponden a los glóbulos rojos jóvenes con RNA residual.</string>
    <string name="strInfHCLeucocitos">Los leucocitos son glóbulos blancos que forman parte del sistema inmunológico. Defienden contra infecciones y participan en respuestas inflamatorias. Valores elevados pueden indicar infección o inflamación, mientras que valores bajos podrían asociarse con algunas condiciones médicas.</string>
    <string name="strInfHCNeutrofilo">Son leucocitos que responden rápidamente a infecciones bacterianas. Aumentan en respuesta a infecciones bacterianas agudas.</string>
    <string name="strInfHCLinfocitos">Juegan un papel crucial en la respuesta inmunológica, incluidas las respuestas a infecciones virales. Variaciones pueden indicar infecciones virales, inmunodeficiencias o trastornos autoinmunitarios.</string>
    <string name="strInfHCEosinofilos">Se asocian comúnmente con respuestas alérgicas y parasitarias. Aumentan en reacciones alérgicas y parasitosis.</string>
</resources>