<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".examenes.FuncionTiroidea"
    android:orientation="vertical"
    android:background="@drawable/fondoprincipal">

    <TextView
        style="@style/txtTituloExamenEspecifico"
        android:text="@string/strExamenFunTiroides"/>

    <ScrollView
        style="@style/scrollExamenEspecifico">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <View style="@style/lineaDiv2OpcionesExamenEspecifico"/>
            <LinearLayout
                style="@style/layoutOpcionExamenEspecifico" >

                <TextView
                    style="@style/txtNombreOpcionExamenEspecifico2"
                    android:text="@string/strHormonaT4T" />


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/txtFieldNumOpcionExamenEspecifico"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/funTiroidesTextFieldT4T"
                        style="@style/editTxtNumOpcionExamenEspecifico"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    style="@style/txtUnidadMedidaOpcionExamenEspecifico"
                    android:text="@string/strNanogramosDecilitro" />

            </LinearLayout>
            <View style="@style/lineaDiv2OpcionesExamenEspecifico"/>

            <View style="@style/lineaDiv3OpcionesExamenEspecifico"/>
            <LinearLayout
                style="@style/layoutOpcionExamenEspecifico" >

                <TextView
                    style="@style/txtNombreOpcionExamenEspecifico2"
                    android:text="@string/strHormonaT3T"
                    />


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/txtFieldNumOpcionExamenEspecifico"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/funTiroidesTextFieldT3T"
                        style="@style/editTxtNumOpcionExamenEspecifico"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    style="@style/txtUnidadMedidaOpcionExamenEspecifico"
                    android:text="@string/strNanogramosMililitro"/>

            </LinearLayout>
            <View style="@style/lineaDiv2OpcionesExamenEspecifico"/>

            <View style="@style/lineaDiv3OpcionesExamenEspecifico"/>
            <LinearLayout
                style="@style/layoutOpcionExamenEspecifico" >

                <TextView
                    style="@style/txtNombreOpcionExamenEspecifico2"
                    android:text="@string/strHormonaTSH"
                    />


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/txtFieldNumOpcionExamenEspecifico"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/funTiroidesTextFieldTSH"
                        style="@style/editTxtNumOpcionExamenEspecifico"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    style="@style/txtUnidadMedidaOpcionExamenEspecifico"
                    android:text="@string/strMiliUnidInterLitro"/>

            </LinearLayout>
            <View style="@style/lineaDiv2OpcionesExamenEspecifico"/>

            <View style="@style/lineaDiv3OpcionesExamenEspecifico"/>
            <LinearLayout
                style="@style/layoutOpcionExamenEspecifico" >

                <TextView
                    style="@style/txtNombreOpcionExamenEspecifico2"
                    android:text="@string/strHormonaT4L"
                    />


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/txtFieldNumOpcionExamenEspecifico"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/funTiroidesTextFieldT4L"
                        style="@style/editTxtNumOpcionExamenEspecifico"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    style="@style/txtUnidadMedidaOpcionExamenEspecifico"
                    android:text="@string/strNanogramosDecilitro2"/>

            </LinearLayout>
            <View style="@style/lineaDiv2OpcionesExamenEspecifico"/>

            <View style="@style/lineaDiv3OpcionesExamenEspecifico"/>
            <LinearLayout
                style="@style/layoutOpcionExamenEspecifico" >

                <TextView
                    style="@style/txtNombreOpcionExamenEspecifico2"
                    android:text="@string/strHormonaT3L"
                    />


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/txtFieldNumOpcionExamenEspecifico"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/funTiroidesTextFieldT3L"
                        style="@style/editTxtNumOpcionExamenEspecifico"
                        />


                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    style="@style/txtUnidadMedidaOpcionExamenEspecifico"
                    android:text="@string/strPicogramosMililitro"/>

            </LinearLayout>
            <View style="@style/lineaDiv2OpcionesExamenEspecifico"/>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center">

        <Button
            android:id="@+id/funTiroidesBotonAnalizar"
            style="@style/btnAnalizar"/>

    </LinearLayout>

</LinearLayout>