<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExamenesInfecciones"
    android:background="@drawable/fondoprincipal" >

    <ImageView
        style="@style/imgContenidoExamenes"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            style="@style/layoutTituloExamenes" >

            <ImageView
                style="@style/iconoTituloExamenes"
                android:src="@drawable/infeccioso" />
            <TextView
                style="@style/txtTituloExamenes"
                android:text="@string/strExaInfecciosas" />

        </LinearLayout>

        <LinearLayout
            style="@style/layoutContenidoExamenes">

            <View
                style="@style/separadorContenidoExamenes" />
            <TextView
                style="@style/txtContenidoExamenes"
                android:text="@string/strVIH" />
            <View
                style="@style/separador2ContenidoExamenes"/>

            <View
                style="@style/separadorContenidoExamenes" />
            <TextView
                style="@style/txtContenidoExamenes"
                android:text="@string/strHepatitisBC" />
            <View
                style="@style/separador2ContenidoExamenes" />

            <View
                style="@style/separadorContenidoExamenes" />
            <TextView
                style="@style/txtContenidoExamenes"
                android:text="@string/strSifilis" />
            <View
                style="@style/separadorContenidoExamenes" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>