<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuPrincipal"
    android:orientation="vertical"
    android:gravity="center">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/img_principal_"
        android:layout_marginBottom="80dp"
        />

    <Button
        android:id="@+id/btnInterpretar"
        style="@style/btnMenuPrincipal"
        android:text="@string/strInterpre"
        android:onClick="viewMenuAnaliClinic"
        />

    <Button
        android:id="@+id/btnResultados"
        style="@style/btnMenuPrincipal"
        android:text="@string/strResults"
        android:onClick="viewResultados"
        />

    <Button
        android:id="@+id/btnTiposExa"
        style="@style/btnMenuPrincipal"
        android:text="@string/strTipExa"
        />

    <Button
        android:id="@+id/btnInformación"
        style="@style/btnMenuPrincipal"
        android:text="@string/strInfo"
        />


</LinearLayout>