<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".examenes.FuncionHepatica"
    android:orientation="vertical"
    android:background="@drawable/fondoprincipal">

    <TextView
        style="@style/txtTituloExamenEspecifico"
        android:text="@string/strExamenFunHepatica"/>

    <ScrollView
        style="@style/scrollExamenEspecifico">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View style="@style/lineaDiv2OpcionesExamenEspecifico"/>
            <LinearLayout
                style="@style/layoutOpcionExamenEspecifico" >

                <TextView
                    style="@style/txtNombreOpcionExamenEspecifico"
                    android:text="@string/strAlaninaT" />


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/txtFieldNumOpcionExamenEspecifico"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/funHepaticaTextFieldAlanina"
                        style="@style/editTxtNumOpcionExamenEspecifico"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    style="@style/txtUnidadMedidaOpcionExamenEspecifico"
                    android:text="@string/strUnidInterLitro" />

            </LinearLayout>
            <View style="@style/lineaDiv2OpcionesExamenEspecifico"/>

            <View style="@style/lineaDivOpcionesExamenEspecifico"/>
            <LinearLayout
                style="@style/layoutOpcionExamenEspecifico" >

                <TextView
                    style="@style/txtNombreOpcionExamenEspecifico"
                    android:text="@string/strAspartatoT"
                    />


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/txtFieldNumOpcionExamenEspecifico"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/funHepaticaTextFieldAspartato"
                        style="@style/editTxtNumOpcionExamenEspecifico"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    style="@style/txtUnidadMedidaOpcionExamenEspecifico"
                    android:text="@string/strUnidLitro"/>

            </LinearLayout>
            <View style="@style/lineaDiv2OpcionesExamenEspecifico"/>

            <View style="@style/lineaDivOpcionesExamenEspecifico"/>
            <LinearLayout
                style="@style/layoutOpcionExamenEspecifico" >

                <TextView
                    style="@style/txtNombreOpcionExamenEspecifico"
                    android:text="@string/strFosfatasaA"
                    />


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/txtFieldNumOpcionExamenEspecifico"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/funHepaticaTextFieldFosfatasa"
                        style="@style/editTxtNumOpcionExamenEspecifico"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    style="@style/txtUnidadMedidaOpcionExamenEspecifico"
                    android:text="@string/strUnidLitro"/>

            </LinearLayout>
            <View style="@style/lineaDiv2OpcionesExamenEspecifico"/>

            <View style="@style/lineaDivOpcionesExamenEspecifico"/>
            <LinearLayout
                style="@style/layoutOpcionExamenEspecifico" >

                <TextView
                    style="@style/txtNombreOpcionExamenEspecifico"
                    android:text="@string/strGammaG"
                    />


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/txtFieldNumOpcionExamenEspecifico"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/funHepaticaTextFieldGamma"
                        style="@style/editTxtNumOpcionExamenEspecifico"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    style="@style/txtUnidadMedidaOpcionExamenEspecifico"
                    android:text="@string/strUnidLitro"/>

            </LinearLayout>
            <View style="@style/lineaDiv2OpcionesExamenEspecifico"/>

            <View style="@style/lineaDivOpcionesExamenEspecifico"/>
            <LinearLayout
                style="@style/layoutOpcionExamenEspecifico" >

                <TextView
                    style="@style/txtNombreOpcionExamenEspecifico"
                    android:text="@string/strTiempoP"
                    />


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/txtFieldNumOpcionExamenEspecifico"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/funHepaticaTextFieldProtombina"
                        style="@style/editTxtNumOpcionExamenEspecifico"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    style="@style/txtUnidadMedidaOpcionExamenEspecifico"
                    android:text="@string/strSegundos"/>

            </LinearLayout>
            <View style="@style/lineaDiv2OpcionesExamenEspecifico"/>

            <View style="@style/lineaDivOpcionesExamenEspecifico"/>
            <LinearLayout
                style="@style/layoutOpcionExamenEspecifico" >

                <TextView
                    style="@style/txtNombreOpcionExamenEspecifico"
                    android:text="@string/strAlbumina"
                    />


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/txtFieldNumOpcionExamenEspecifico"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/funHepaticaTextFieldAlbumina"
                        style="@style/editTxtNumOpcionExamenEspecifico"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    style="@style/txtUnidadMedidaOpcionExamenEspecifico"
                    android:text="@string/strGramosDesilitros"/>

            </LinearLayout>
            <View style="@style/lineaDiv2OpcionesExamenEspecifico"/>

            <View style="@style/lineaDivOpcionesExamenEspecifico"/>
            <LinearLayout
                style="@style/layoutOpcionExamenEspecifico" >

                <TextView
                    style="@style/txtNombreOpcionExamenEspecifico"
                    android:text="@string/strBilirrubinaD"
                    />


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/txtFieldNumOpcionExamenEspecifico"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/funHepaticaTextFieldBiliDirec"
                        style="@style/editTxtNumOpcionExamenEspecifico"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    style="@style/txtUnidadMedidaOpcionExamenEspecifico"
                    android:text="@string/strMiligramosDesilitros"/>

            </LinearLayout>
            <View style="@style/lineaDiv2OpcionesExamenEspecifico"/>

            <View style="@style/lineaDivOpcionesExamenEspecifico"/>
            <LinearLayout
                style="@style/layoutOpcionExamenEspecifico" >

                <TextView
                    style="@style/txtNombreOpcionExamenEspecifico"
                    android:text="@string/strBilirrubinaT"
                    />


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/txtFieldNumOpcionExamenEspecifico"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/funHepaticaTextFieldBiliTotal"
                        style="@style/editTxtNumOpcionExamenEspecifico"
                        />


                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    style="@style/txtUnidadMedidaOpcionExamenEspecifico"
                    android:text="@string/strMiligramosDesilitros"/>

            </LinearLayout>
            <View style="@style/lineaDiv2OpcionesExamenEspecifico"/>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center">

        <Button
            android:id="@+id/funHepaticaBotonAnalizar"
            style="@style/btnAnalizar"/>

    </LinearLayout>

</LinearLayout>